fixing article container display on mobile

--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ h2.typing-text {
     gap: 10px;
     margin: 10px;
     margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 150px;
   }
 
   .project-card {
